Adicionar mejoras